syntax = "proto3";

package rfmk.resolink;

import "assets.proto";
import "models.proto";
import "google/protobuf/empty.proto";

service LinkService {
  rpc GetSlot (GetSlotRequest) returns (Slot) {}
  rpc AddSlot (AddSlotRequest) returns (google.protobuf.Empty) {}
  rpc UpdateSlot (UpdateSlotRequest) returns (google.protobuf.Empty) {}
  rpc RemoveSlot (DeleteSlotRequest) returns (google.protobuf.Empty) {}

  rpc GetComponent (GetComponentRequest) returns (Component) {}
  rpc AddComponent (AddComponentRequest) returns (google.protobuf.Empty) {}
  rpc UpdateComponent (UpdateComponentRequest) returns (google.protobuf.Empty) {}
  rpc RemoveComponent (DeleteComponentRequest) returns (google.protobuf.Empty) {}

  // File operations (this may not be available in all contexts).
  rpc ImportTextureFile (ImportFileRequest) returns (AssetResponse);
  rpc ImportAudioClipFile (ImportFileRequest) returns (AssetResponse);
  
  rpc ImportTexture (ImportTextureRequest) returns (AssetResponse);
  rpc ImportMesh (ImportMeshRequest) returns (AssetResponse);
  rpc ImportAudioClip (ImportAudioClipRequest) returns (AssetResponse);
}

message GetSlotRequest {
  string slot_id = 1;
  int32 depth = 2;
  bool include_component_data = 3;
}

message AddSlotRequest {
  Slot data = 1;
}

message UpdateSlotRequest {
  Slot data = 2;
}

message DeleteSlotRequest {
  string slot_id = 1;
}

message GetComponentRequest {
  string component_id = 1;
}

message AddComponentRequest {
  string container_slot_id = 1;
  Component data = 2;
}

message UpdateComponentRequest {
  Component data = 1;
}

message DeleteComponentRequest {
  string component_id = 1;
}

message ImportFileRequest {
  string file_path = 1;
}

message ImportTextureRequest {
  Texture texture = 1;
}

message ImportMeshRequest {
  oneof mesh_kind {
    MeshJson json = 1;
    MeshRaw raw = 2;
  }
}

message ImportAudioClipRequest {
  RawAudioClip raw_clip = 1;
}

message AssetResponse {
  string asset_url = 1;
}
